        Reviewed by Oliver.

<rdar://problem/5096134> VO gets stuck on Howto.apple.com
        http://bugs.webkit.org/show_bug.cgi?id=8622
        VisiblePositions aren't canonicalized in some cases

        No new test cases added: can't write automated tests
        for VO.

        * editing/IndentOutdentCommand.cpp:
        (WebCore::IndentOutdentCommand::outdentParagraph):
        VisiblePositions must be recomputed after nodes that
        may have effected their canonicalization are removed.
        * editing/VisiblePosition.cpp:
        (WebCore::canonicalizeCandidate): Added.
        (WebCore::VisiblePosition::canonicalPosition): Canonicalize
        the candidates returned by next/previousCandidate before
        returning them.
        * editing/VisiblePosition.h:
        (WebCore::operator==): Remove the workaround for 8622.
        * editing/visible_units.cpp:
        (WebCore::startOfParagraph): Ditto.



Canonical link: https://commits.webkit.org/18270@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21904 268f45cc-cd09-0410-ab3c-d52691b4dbfc