WebCore/editing/VisiblePosition.h
@@ -64,8 +64,6 @@ public:
     VisiblePosition next(bool stayInEditableContent = false) const;
     VisiblePosition previous(bool stayInEditableContent = false) const;
 
-    bool isLastInBlock() const;
-
     UChar characterAfter() const;
     UChar characterBefore() const { return previous().characterAfter(); }
     
@@ -88,11 +86,10 @@ private:
     EAffinity m_affinity;
 };
 
+// FIXME: This shouldn't ignore affinity.
 inline bool operator==(const VisiblePosition &a, const VisiblePosition &b)
 {
-    return a.deepEquivalent() == b.deepEquivalent() || 
-           // FIXME (8622): This is a slow but temporary workaround. 
-           a.deepEquivalent().downstream() == b.deepEquivalent().downstream();
+    return a.deepEquivalent() == b.deepEquivalent();
 }
  
 inline bool operator!=(const VisiblePosition &a, const VisiblePosition &b)
