WebCore/editing/visible_units.cpp
@@ -583,13 +583,6 @@ VisiblePosition nextSentencePosition(const VisiblePosition &c)
 VisiblePosition startOfParagraph(const VisiblePosition &c)
 {
     Position p = c.deepEquivalent();
-    // FIXME: Use the leftmost candidate.  Canonicalization should give us the leftmost candidate,
-    // but it sometimes doesn't because of 8622.
-    if (p.upstream().isCandidate()) {
-        p = p.upstream();
-        ASSERT(VisiblePosition(p) == c);
-    }
-
     Node *startNode = p.node();
 
     if (!startNode)
